change toe getActiveEvent
